<resources>
    <string name="app_name">Формулы по физике</string>
    <string name="select_a_class_text">Выберите класс!</string>
    <string name="class_7">7 класс</string>
    <string name="class_8">8 класс</string>
    <string name="class_9">9 класс</string>
    <string name="back_text">назад</string>
    <string name="formulas">формулы</string>
    <string name="laws_of_physics">законы и явления</string>
    <string name="choice8class_text">Выберите раздел 8 класса который вас интересует</string>
    <string name="choice7class_text">Выберите раздел 7 класса который вас интересует</string>
    <string name="choice9class_text">Выберите раздел 9 класса который вас интересует</string>
    <string name="formula70t">скорость</string>
    <string name="formula71t">плотность</string>
    <string name="formula72t">силя тяжести</string>
    <string name="formula73t">сила упругости</string>
    <string name="formula74t">давление</string>
    <string name="formula75t">сила Архимеда</string>
    <string name="formula76t">сила трения</string>
    <string name="formula77t">давление в жидкости(газе)</string>
    <string name="formula78t">работа силы</string>
    <string name="formula79t">мощность</string>
    <string name="formula710t">закон равновесия рычага</string>
    <string name="formula711t">момент силы</string>
    <string name="formula712t">коэффициент полезного действия</string>
    <string name="formula713t">потанциальная и кинетическая энергия</string>
    <string name="formula70">$v=S/t$</string>
    <string name="formula71">$p=m/V$</string>
    <string name="formula72">$F_{тяж}=mg$</string>
    <string name="formula73">$F_{упр}=kx$</string>
    <string name="formula74">$p=F/S$</string>
    <string name="formula75">$F_А=pgV$</string>
    <string name="formula76">$F_{тр}=μN=μmg$</string>
    <string name="formula77">$p=pgh$</string>
    <string name="formula78">$A=FS$</string>
    <string name="formula79">$N=A/t$</string>
    <string name="formula710">$F_{1}/F_2=l_2/l_{1}$</string>
    <string name="formula711">$M=Fl$</string>
    <string name="formula712">$η=A_п/A_з100%$</string>
    <string name="formula713">$E_п=mgh; E_к={mv^2}/2$</string>
    <string name="formula80t">количество теплоты</string>
    <string name="formula81t">количество теплоты при сгорании топлива</string>
    <string name="formula82t">количество теплоты, необходимого для плавления вещества</string>
    <string name="formula83t">количество теплоты при парообразовании и конденсации</string>
    <string name="formula84t">закон Ома для участка цепи</string>
    <string name="formula85t">сила тока</string>
    <string name="formula86t">работа электрического тока</string>
    <string name="formula87t">электрическая мощность</string>
    <string name="formula88t">закон Джоуля-Ленца</string>
    <string name="formula89t">абсолютный показатель преломления вещества</string>
    <string name="formula810t">закон Снеллиуса</string>
    <string name="formula811t">оптическая сила линзы</string>
    <string name="formula812t">удельное сопротивления проводника</string>
    <string name="formula80">$Q=cmΔt$</string>
    <string name="formula81">$Q=qm$</string>
    <string name="formula82">$Q=λm$</string>
    <string name="formula83">$Q=Lm$</string>
    <string name="formula84">$I=U/R$</string>
    <string name="formula85">$I=q/t$</string>
    <string name="formula86">$A=Uq=UIt$</string>
    <string name="formula87">$P=A/t=UI=U^2/R$</string>
    <string name="formula88">$Q=I^2Rt$</string>
    <string name="formula89">$n=c/v$</string>
    <string name="formula810">${sinα}/{sinγ}={v1}/{v2}=n$</string>
    <string name="formula811">$D=1/F$</string>
    <string name="formula812">$R=ρl/S$</string>
    <string name="formula90t">вычисление перемещения</string>
    <string name="formula91t">проекция вектора перемещения</string>
    <string name="formula92t">уравнение движения</string>
    <string name="formula93t">ускорение движения тела</string>
    <string name="formula94t">уравнение скорости</string>
    <string name="formula95t">уравнение Галилея</string>
    <string name="formula96t">изменение координаты тела при прямолинейном равноускоренном движении</string>
    <string name="formula97t">второй закон Ньютона</string>
    <string name="formula98t">вычисление высоты, с которой падает тело</string>
    <string name="formula99t">высота при движении вертикально вверх</string>
    <string name="formula910t">закон всемироного тяготения</string>
    <string name="formula911t">ускорение свободного падения на разных планетах</string>
    <string name="formula912t">ускорение свободного падения</string>
    <string name="formula913t">период движения по окружности</string>
    <string name="formula914t">период движения по окружности</string>
    <string name="formula915t">расчет угловой скорости</string>
    <string name="formula916t">импульс тела</string>
    <string name="formula917t">импульс силы</string>
    <string name="formula918t">уравнение колебаний</string>
    <string name="formula919t">период для математического маятника; пружинного маятника</string>
    <string name="formula920t">длина волны</string>
    <string name="formula921t">сила Ампера</string>
    <string name="formula922t">закон преломления</string>
    <string name="formula923t">работа электрического тока</string>
    <string name="formula924t">тонкая линзы</string>
    <string name="formula925t">массовое число</string>
    <string name="formula926t">масса ядра</string>
    <string name="formula927t">дефект масс</string>
    <string name="formula928t">энергия связи</string>
    <string name="formula90">$AB^2=AC^2+BC^2$</string>
    <string name="formula91">$S_x=x_2-x_{1}$</string>
    <string name="formula92">$x=x_0+v_xt$</string>
    <string name="formula93">$a={v-v_{0x}}/t$</string>
    <string name="formula94">$v=v_0+at$</string>
    <string name="formula95">$S=v_0t+{at^2}/2$</string>
    <string name="formula96">$x=x_0+v_0t+{at^2}/2$</string>
    <string name="formula97">$a=F/m$</string>
    <string name="formula98">$h={gt^2}/2$</string>
    <string name="formula99">$h=v_0t-{gt^2}/2$</string>
    <string name="formula910">$F=G{m_{1}m_{2}}/r^2$</string>
    <string name="formula911">$g=G{M_{пл.}}/R_{пл}^2$</string>
    <string name="formula912">$g={GM_З}/{(R_з+h)^2}$</string>
    <string name="formula913">$a=v^2/r$</string>
    <string name="formula914">$T=1/v={2πR}/υ=t/N$</string>
    <string name="formula915">$ω={2π}/T=2πν=υr$</string>
    <string name="formula916">$p=mv$</string>
    <string name="formula917">$P=Ft$</string>
    <string name="formula918">$x=Acos(ωt+φ_0)$</string>
    <string name="formula919">$T=2π√{L/g}; T =2π√{m/K}$</string>
    <string name="formula920">$λ=υТ=υ/ν$</string>
    <string name="formula921">$F_{Ам}=BIl$</string>
    <string name="formula922">${sinα}/{sinγ}={n2}/{n1}$</string>
    <string name="formula923">$A=UIt=Uq$</string>
    <string name="formula924">$1/F=1/d+1/f$</string>
    <string name="formula925">$M=Z+N$</string>
    <string name="formula926">$M_я=M_АZm_e$</string>
    <string name="formula927">$∆m=Zm_p+Nm_n–M_Я$</string>
    <string name="formula928">$Е_{связи}=∆mc^2$</string>
    <string name="laws70t">Условие плавания тел:</string>
    <string name="laws71t">Закон гидравлической машины:</string>
    <string name="laws72t">Закон сообщающихся сосудов:</string>
    <string name="laws73t">Сохранение и превращение механической энергии:</string>
    <string name="laws74t">Броуновское движение:</string>
    <string name="laws75t">Ускорение свободного падения:</string>
    <string name="laws70">Если архимедова сила больше силы тяжести тела, то тело всплывает.</string>
    <string name="laws71">Силы действующие на уравновешенные поршни гидравлической машины, пропорциональны площадям этих поршней.</string>
    <string name="laws72">Однородная жидкость в сообщающихся сосудах находится на одном уровне.</string>
    <string name="laws73">Сумма потенциальной и кинетической энергии в любой момент времени остается постоянной.</string>
    <string name="laws74">Беспорядочное движение микроскопических видимых взвешенных частиц твёрдого вещества в жидкости или газе, вызываемое тепловым движением частиц жидкости или газа.</string>
    <string name="laws75">Ускорение свободного падения (g) одинаково для всех тел на данной широте Земного шара.
g=9,81.</string>
    <string name="laws80t">Объёмное расширение твердых тел:</string>
    <string name="laws81t">Линейное расширение твердых тел:</string>
    <string name="laws82t">Теплоёмкость тела:</string>
    <string name="laws83t">Коэффициент полезного действия (КПД) тепловой машины:</string>
    <string name="laws84t">Закон Кулона:</string>
    <string name="laws85t">Последовательное соединение проводников:</string>
    <string name="laws86t">Параллельное соединение проводников:</string>
    <string name="laws87t">Закон отражения света:</string>
    <string name="laws88t">Законы преломления света:</string>
    <string name="laws80">При нагревании изменение объёма тела прямо пропорционально изменению его температуры.</string>
    <string name="laws81">При нагревании длина тела прямо пропорциональна изменению температуры.</string>
    <string name="laws82">Теплоёмкость тела из однородного вещества равна произведению массы тела на удельную теплоёмкость вещества.</string>
    <string name="laws83">1) КПД тепловой машины тем выше, чем количество теплоты отданное нагревателем, больше количества теплоты полученного охладителем.
2) КПД не может быть равен или больше единицы.</string>
    <string name="laws84">Сила взаимодействия двух заряженных тел, размерами которых можно пренебречь по сравнению с расстоянием между ними, прямо пропорциональна значениям их зарядов и обратно пропорциональна квадрату расстояния между ними.</string>
    <string name="laws85">При последовательном соединении проводников:
1) сила тока (I) во всех участках (I1, I2, … In) цепи одинакова;
2) общее сопротивление цепи (R) или её участка равно сумме сопротивлений отдельных проводников (R1, R2, … Rn) (или отдельных участков цепи);
3) общее напряжение в цепи (U) равно сумме напряжений на её отдельных участках (U1, U2, … Un).</string>
    <string name="laws86">При параллельном соединении проводников:
1) сила тока (I) в цепи равна сумме сил токов (I1, I2, … In) в отдельных ветвях;
2) общее сопротивление цепи (R) связано с сопротивлениями проводников в отдельных ветвях (R1, R2, … Rn) зависимостью обратного вида;
3) общее напряжение в цепи (U) равно напряжению на её отдельных ветвях (U1, U2, … Un);
4) если соединены n проводников с одинаковым сопротивлением (R1=R2= … =Rn), то общее сопротивление цепи (Rобщ) в n раз меньше сопротивления каждого из проводников.</string>
    <string name="laws87">1) Падающий и отраженный лучи, а также перпендикуляр, опущенный к границе раздела двух сред в точку падения луча, лежат в одной плоскости.
2) Угол падения (α) равен углу отражения (β).</string>
    <string name="laws88">1) Падающий и отраженный лучи, а также перпендикуляр, опущенный к границе раздела двух сред в точку падения луча, лежат в одной плоскости.
2) Относительный показатель преломления второй среды относительно первой (n1,2), равный отношению синуса угла падения (α) к синусу угла преломления (γ), для данных двух сред есть величина постоянная, зависящая только от скоростей (v1 и v2) распространения света в этих средах.
Если первой средой является вакуум (или воздух), то отношение синуса угла падения (α) к синусу угла преломления (γ) равно абсолютному показателю преломления для второй среды (n2).</string>
    <string name="laws90t">Первый закон Ньютона:</string>
    <string name="laws91t">Второй закон Ньютона:</string>
    <string name="laws92t">Третий закон Ньютона:</string>
    <string name="laws93t">Закон всемирного тяготения:</string>
    <string name="laws94t">Трение покоя:</string>
    <string name="laws95t">Трение скольжения:</string>
    <string name="laws96t">Коэффициент трения:</string>
</resources>