<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula90t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula91t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula92t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula93t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view94"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view94"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula94t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula95t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view96"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view96"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula96t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula97t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula98t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view99"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view99"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula99t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view910"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view910"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula910t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view911"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view911"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula911t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view912"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view912"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula912t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view913"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view913"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula913t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view914"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view914"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula914t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view915"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view915"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula915t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view916"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view916"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula916t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view917"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view917"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula917t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view918"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view918"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula918t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view919"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view919"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula919t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view920"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view920"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula920t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view921"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view921"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula921t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view922"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view922"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula922t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view923"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view923"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula923t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view924"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view924"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula924t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view925"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view925"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula925t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view926"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view926"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula926t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view927"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view927"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula927t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view928"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view928"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula928t"/>

</LinearLayout>