<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula80t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula81t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula82t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view83"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view83"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula83t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view84"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view84"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula84t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula85t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view86"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view86"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula86t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula87t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula88t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula89t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view810"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view810"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula810t"/>

    <com.zanvent.mathview.MathView
        android:id="@+id/math_view811"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view811"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula811t"/>



</LinearLayout>