<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/select_a_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/select_a_class_text"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/seven_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seven_class"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:text="@string/class_7"
        android:background="@drawable/round_button"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/select_a_class"
        app:layout_constraintBottom_toTopOf="@id/eighth_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/eighth_class"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:text="@string/class_8"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/ninth_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seven_class" />

    <Button
        android:id="@+id/ninth_class"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginBottom="250dp"
        android:text="@string/class_9"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eighth_class" />

</androidx.constraintlayout.widget.ConstraintLayout>